--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -2,6 +2,10 @@
   {% block footer %} {{ super() }}
 
   <style>
+    .wy-nav-content {
+        max-width: 80%;
+    }
+
     .wy-table-responsive table td, .wy-table-responsive table th {
         white-space: normal !important;
     }
